<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fase1">

    <EditText
        android:id="@+id/P1L1"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/P2L2"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/P1L4"
        app:layout_constraintTop_toBottomOf="@+id/P1L3" />

    <EditText
        android:id="@+id/P2L3"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/P2L2"
        app:layout_constraintTop_toBottomOf="@+id/P1L3" />

    <EditText
        android:id="@+id/P2L4"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/P2L3"
        app:layout_constraintTop_toBottomOf="@+id/P1L3" />

    <EditText
        android:id="@+id/P2L5"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/P2L4"
        app:layout_constraintTop_toBottomOf="@+id/P1L3" />

    <EditText
        android:id="@+id/P1L2"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P1L1" />

    <EditText
        android:id="@+id/P1L3"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P1L2" />

    <EditText
        android:id="@+id/P1L4"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P1L3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:text="@string/numero_1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/numero_2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P1L3" />

    <TextView
        android:id="@+id/Palavra1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/Palavra1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Palavra2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/Palavra2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/green"
        android:onClick="Checar"
        android:text="@string/botao_checar"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>