<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fase3">

    <TextView
        android:id="@+id/Numero6"
        android:layout_width="15dp"
        android:layout_height="26dp"
        android:layout_marginEnd="4dp"
        android:text="@string/numero_6"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/p6L1"
        app:layout_constraintTop_toTopOf="@+id/p6L1" />

    <EditText
        android:id="@+id/p6L7"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p6L6"
        app:layout_constraintTop_toTopOf="@+id/p6L1" />

    <EditText
        android:id="@+id/p6L6"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p6L5"
        app:layout_constraintTop_toTopOf="@+id/p6L1" />

    <EditText
        android:id="@+id/p6L5"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p6L4"
        app:layout_constraintTop_toTopOf="@+id/p6L1" />

    <EditText
        android:id="@+id/p6L4"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p6L3"
        app:layout_constraintTop_toTopOf="@+id/p6L1" />

    <EditText
        android:id="@+id/p6L3"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p6L2"
        app:layout_constraintTop_toTopOf="@+id/p6L1" />

    <EditText
        android:id="@+id/p6L2"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p6L1"
        app:layout_constraintTop_toTopOf="@+id/p6L1" />

    <EditText
        android:id="@+id/p6L1"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/green"
        android:onClick="Checar"
        android:text="@string/botao_checar"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Palavra6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:singleLine="false"
        android:text="@string/Palavra6"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>