<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fase2">

    <EditText
        android:id="@+id/p5L7"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p5L6"
        app:layout_constraintTop_toTopOf="@+id/p5L6" />

    <EditText
        android:id="@+id/p5L6"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p5L5"
        app:layout_constraintTop_toTopOf="@+id/p5L5" />

    <EditText
        android:id="@+id/p5L5"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p5L4"
        app:layout_constraintTop_toTopOf="@+id/p5L4" />

    <EditText
        android:id="@+id/p5L4"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p5L3"
        app:layout_constraintTop_toTopOf="@+id/p5L3" />

    <EditText
        android:id="@+id/p5L3"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p5L2"
        app:layout_constraintTop_toTopOf="@+id/p5L2" />

    <EditText
        android:id="@+id/p5L2"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p4L3"
        app:layout_constraintTop_toTopOf="@+id/p4L3" />

    <EditText
        android:id="@+id/p4L2"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/p3L3"
        app:layout_constraintTop_toBottomOf="@+id/p3L3" />

    <EditText
        android:id="@+id/p4L3"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/p4L2"
        app:layout_constraintTop_toBottomOf="@+id/p4L2" />

    <EditText
        android:id="@+id/p4L4"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/p4L3"
        app:layout_constraintTop_toBottomOf="@+id/p4L3" />

    <EditText
        android:id="@+id/p3L14"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L13"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L13"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L12"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L12"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L11"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L11"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L10"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L10"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L9"
        app:layout_constraintTop_toTopOf="@+id/p3L9" />

    <EditText
        android:id="@+id/p3L9"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L8"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L8"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L7"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L7"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L6"
        app:layout_constraintTop_toTopOf="@+id/p3L6" />

    <EditText
        android:id="@+id/p3L6"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L5"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L5"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L4"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L4"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L3"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L3"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L2"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L2"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/p3L1"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <EditText
        android:id="@+id/p3L1"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:background="#DCDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Palavra3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="150dp"
        android:text="@string/Palavra3"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Palavra4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="100dp"
        android:singleLine="false"
        android:text="@string/Palavra4"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Palavra5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="52dp"
        android:singleLine="false"
        android:text="@string/Palavra5"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/green"
        android:onClick="Checar"
        android:text="@string/botao_checar"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/numero_3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/p3L1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/numero_5"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/p4L3"
        app:layout_constraintTop_toTopOf="@+id/p4L3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="4dp"
        android:text="@string/numero_4"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/p3L3"
        app:layout_constraintStart_toStartOf="@+id/p3L3" />
</androidx.constraintlayout.widget.ConstraintLayout>